# rust-download-manager

./: Cargo.toml  README.md
src/: api.rs  daemon.rs  db.rs  err.rs  http.rs  main.rs  rest.rs  types.rs
src/daemon1/: client.rs  daemon.rs  stream.rs  types.rs  worker.rs
src/http/: client.rs  mod.rs  rest.rs  types.rs
src/jobs/: client.rs  db.rs  mod.rs  state.rs  types.rs
src/manager/: client.rs  daemon.rs  mod.rs  stream.rs  types.rs  worker.rs
src/state/: client.rs  db.rs  state.rs  types.rs
