[package]
name = "downmgr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
clap = "2.34.0"
rand = "0.8.4"
reqwest = { version = "0.11.8", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rusqlite = "0.26.3"
serde = { version = "1.0.132" , features = ["derive"]}
shellexpand = "2.1.0"
tokio = { version = "1", features = ["full"] } # TODO: filter out unused features
url = "2.2.2"
